# cranelift-testing

./: .gitignore  Cargo.toml  Makefile  README.md  justfile
crates/crt-alloc/: Cargo.toml
crates/crt-core/: Cargo.toml
crates/crt-runtime/: Cargo.toml  build.rs
crates/crt-runtime/src/: main.rs
crates/crt-std/: Cargo.toml
crates/crt-std/src/: lib.rs
src/: main.rs
testing/: Makefile  cr.h  main.c  wrapper.c  wrapper.h
