[package]
name = "cranelift-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = { version = "0.95.0", features = ["all-arch"] }
cranelift-frontend = { version = "0.95.0" }
cranelift-jit = { version = "0.95.0" }
cranelift-module = { version = "0.95.0" }
cranelift-native = { version = "0.95.0" }
cranelift-object = { version = "0.95.0" }

[workspace]
members = ["crates/*"]
